--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,11 @@
  *     14.  Contact              *
  *     15.  Footer               *  
 **********************************/
+/* ==================================== Hero start ================================== */
 
+
+  
+/* ==================================== Hero end ================================== */
 
 /* =================================== Portfolio  start =================================== */
 #work img{
@@ -920,7 +924,7 @@ p {
 }
 
 .typed-heading {
-  font-size: 54px !important;
+  font-size: 40px !important;
   font-weight: 600 !important;
   line-height: 1.3;
   text-transform: capitalize;
@@ -1864,7 +1868,7 @@ a.text-gradient-light-100:hover, a.text-gradient-light-100:focus {
 
 .navbar .navbar-nav .nav-item .nav-link {
   color: #ffffff;
-  font-size: 13px;
+  font-size: 15px;
   letter-spacing: 1px;
   font-weight: 600;
   text-transform: uppercase;
@@ -2754,10 +2758,14 @@ a.text-gradient-light-100:hover, a.text-gradient-light-100:focus {
   position: absolute;
   opacity: 0;
   z-index: 1;
-  bottom: 110px;
+  bottom: 25px;
+  left: 45% !important;
+  transform: translateX(-45%);
   inset-inline-start: 40px;
   -webkit-transition: all 1s;
   transition: all 1s;
+  text-align: center;  
+
 }
 
 .projects-wrapper .work-container .content .content-title {
