--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,68 @@
  *     15.  Footer               *  
 **********************************/
 /* ==================================== Hero start ================================== */
+ #home .social-container {
+    width: 500px;
+    margin-top: 32px;
+    margin-bottom: 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 20px;
+    border-radius: 12px;
+    border: 1px solid rgb(170, 145, 145);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
 
+  #home .social-container a {
+    color: #555;
+    font-size: 36px;
+    transition: color 0.3s ease, transform 0.3s ease;
+  }
+
+  #home .social-container a.whatsapp {
+    color: #25D366;
+  }
+  #home .social-container a.email {
+    color: #25D366;
+  }
+  #home .social-container a.youtube {
+    color: #FF0000;
+  }
+  #home .social-container a.medium {
+    color: #00ab6c;
+  }
+  #home .social-container a.linkedin {
+    color: #0077b5;
+  }
+  #home .social-container a.facebook {
+    color: 	#1877F2;
+  }
+
+  #home .social-container a:hover {
+    color: #0077b5; /* LinkedIn blue as default hover */
+    transform: scale(1.2);
+  }
+
+  /* Individual brand colors on hover */
+  #home .social-container a.whatsapp:hover {
+    color: #23b659;
+  }
+  #home .social-container a.email:hover {
+    color: #22934c;
+  }
+  #home .social-container a.youtube:hover {
+    color: #c30f0f;
+  }
+  #home .social-container a.medium:hover {
+    color: #077b51;
+  }
+  #home .social-container a.linkedin:hover {
+    color: #0e76ae;
+  }
+  #home .social-container a.facebook:hover {
+    color: #1877F2;
+  }
 
   
 /* ==================================== Hero end ================================== */
@@ -824,7 +885,7 @@ p {
   line-height: 30px;
   display: none;
   color: #ffffff;
-  background-color: #ebb884;
+  background-color: #ec831a;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-box-shadow: 0 0 3px rgba(22, 28, 45, 0.15);
@@ -832,7 +893,7 @@ p {
 }
 
 .back-to-top:hover {
-  background-color: #ebb884;
+  background-color: #9a5a19;
   color: #ffffff;
 }
 
@@ -924,7 +985,7 @@ p {
 }
 
 .typed-heading {
-  font-size: 40px !important;
+  font-size: 38px !important;
   font-weight: 600 !important;
   line-height: 1.3;
   text-transform: capitalize;
@@ -2682,15 +2743,15 @@ a.text-gradient-light-100:hover, a.text-gradient-light-100:focus {
 }
 
 .container-filter li {
-  font-weight: 500;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 1.5;
-  text-align: center;
-  color: #1d1d1d !important;
-  padding: 0 28px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    font-weight: 700;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: center;
+    color: #1d1d1d !important;
+    padding: 0 28px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .container-filter li:hover, .container-filter li.active {
