--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* 
    Author: Foysal Hasib
-   Email: faisalhasib@gmail.com
+   Email: faisalhasib82@gmail.com
 */
 /*********************************/
 /*                INDEX          */
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 20px;
+    padding: 8px 20px;
     border-radius: 12px;
     border: 1px solid rgb(170, 145, 145);
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
